--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 @charset "UTF-8";
 
-*{
-    font-family: Graphik-Medium, "Graphik-Regular", "Gotham SSm A", "Gotham SSm B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body{
     background-color: #0a0800;
@@ -11,9 +8,10 @@ body{
 
 main{
     background-color: #F4F0BC;
- 
+    font-family: 'Montserrat', sans-serif;
     border: 10px;
-    width: 600px;
+    min-width: 320;
+    max-width: 800px;
     padding: 20px;
     margin: auto;
 
