--- a/style.css
+++ b/style.css
@@ -1,42 +1,68 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
+*{
+    color: white;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'PT Sans', sans-serif;
+ 
+}
+
+:root {
+    --cor0: black;
+    --cor1: #1E1E1E;
+    --cor2: yellow;
+    --fonte-padrao: 'PT Sans', sans-serif;
+   
+}
+
 
 body{
-    background-color: #0a0800;
+    background-color: var(--cor1);
+}
+
+header {
+    background-color: var(--cor1);
+    margin: auto;
+    min-height: 100px;
 }
 
 main{
-    background-color: #F4F0BC;
-    font-family: 'Montserrat', sans-serif;
+    background-color: var(--cor1);
+    font-family: var(--fonte-padrao);
     border: 10px;
     min-width: 320;
-    max-width: 800px;
+    max-width: 1000px;
     padding: 20px;
     margin: auto;
 
 }
 
-h1{
-    color: #0a0800;
+footer {
+    background-color: var(--cor0);
+    width: 100%;
+    height: 25px;
+    margin: auto;
+    bottom: 0;
+    position: fixed;
+}
+
+footer > p {
     text-align: center;
-    text-shadow: 1px 1px 2px rgba(19, 3, 4, 0.15)
-
 }
 
-h2{
-    color: #0a0800;
-
+footer strong {
+    color: var(--cor2)
 }
 
-p{
-    text-align: justify;
-    max-width: 420px;
-}
+
 
 a{
     text-decoration: none;
-    color: #4900e7;
+    color: var(--cor2);
     font-weight: bold;
 }
 
