--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ main{
     font-family: var(--fonte-padrao);
     border: 10px;
     min-width: 320;
-    max-width: 1000px;
+    max-width: 800px;
     padding: 20px;
     margin: auto;
 
@@ -56,6 +56,10 @@ footer > p {
 
 footer strong {
     color: var(--cor2)
+}
+
+strong {
+    color: var(--cor2);
 }
 
 
