--- a/style.css
+++ b/style.css
@@ -30,6 +30,18 @@ header {
     min-height: 100px;
 }
 
+section > main > h1 {
+    
+        display: block;
+        font-size: 1.5em;
+        margin-block-start: 0.83em;
+        margin-block-end: 0.83em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+        border-bottom: var(--cor2) 1px solid;
+    }
+
 main{
     background-color: var(--cor1);
     font-family: var(--fonte-padrao);
